--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/boela/main/Game Exports/Where souuls go (Sandbox)/0.3.1/Where Souuls Go (SandBox).x86_64"
+export_path="/home/boela/main/Game Exports/Where souuls go (Sandbox)/0.3.2/Linux/Where Souuls Go (SandBox).x86_64"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -32,7 +32,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/boela/main/Game Exports/Where souuls go (Sandbox)/0.3/Windowss/Where Souuls Go (SandBox).x86_64.exe"
+export_path="/home/boela/main/Game Exports/Where souuls go (Sandbox)/0.3.2/Windows/Where Souuls Go (SandBox).x86_64.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
